--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -11,7 +11,7 @@
 <header>
     <div class="container">
         <a href="/">PetDevShop</a>
-        <form method="GET" action="">
+        <form method="GET" action="/buscar">
             <input type="search" name="q" placeholder="Pesquise por raça" />
         </form>
     </div>
@@ -24,10 +24,3 @@
         <li class=""><a href="/peixes">Peixes</a></li>
     </ul>
 </nav>
-
-
-<footer class="container">
-    Feito com ❤ pela B7Web
-</footer>
-</body>
-</html>
