--- a/src/views/pages/page.mustache
+++ b/src/views/pages/page.mustache
@@ -1,5 +1,5 @@
-
-<section class="banner" style="background-image: url('images/allanimals.jpg')">Todos os animais</section>
+{{>partials/header}}
+<section class="banner" style="background-image: url('/images/allanimals.jpg')">Todos os animais</section>
 <h2>Todos os animais disponíveis para adoção</h2>
 
 <div class="container list">
@@ -106,3 +106,4 @@
         <div class="item--genre">Gênero: Masculino</div>
     </div>
 </div>
+{{>partials/footer}}
